Fixed the alignment issues for internet explorer.

--- a/src/styles/sidebarComponent.css
+++ b/src/styles/sidebarComponent.css
@@ -125,6 +125,10 @@ blockquote {
     font-size: 1rem;
 }
 
+.experience-container .card-content {
+    height: 100%;
+}
+
 /*******************************************/
 
 /******* Projects Component Style *******/
